--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,12 @@
-Flask==1.1.4
-joblib>=1.1.1
-scikit-learn==1.5.2
-markupsafe==1.1.1
-numpy==1.21.0
-waitress==2.1.1
+Flask==3.1.0
+imbalanced-learn==0.12.4
+imblearn==0.0
+joblib==1.4.2
+matplotlib==3.9.2
+matplotlib-inline==0.1.7
+mkl-service==2.4.0
+openpyxl==3.1.5
+scikit-learn==1.6.0
+seaborn
+wordcloud==1.9.4
+markupsafe
