--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,8 @@ matplotlib==3.9.2
 matplotlib-inline==0.1.7
 mkl-service==2.4.0
 openpyxl==3.1.5
-scikit-learn==1.6.0
+scikit-learn==1.5.2
 seaborn
 wordcloud==1.9.4
 markupsafe
+gunicorn
